color-change-without-animation

--- a/index.html
+++ b/index.html
@@ -40,14 +40,14 @@
     </header>
 
     <main>
-        <div class="cutaway">
-            <section class="cutaway-section-1">
-                <div class="cutaway-section-1__inner">
-                    <div class="cutaway-section-1__indentation"></div>
-                    <div class="cutaway-section-1__h1-wrapper">
-                        <h1 class="text_white cutaway-section-1__header">Creating the next...</h1>
+        <div class="white-part">
+            <section class="white-part-section-1">
+                <div class="white-part-section-1__inner">
+                    <div class="white-part-section-1__indentation"></div>
+                    <div class="white-part-section-1__h1-wrapper">
+                        <h1 class="text_white white-part-section-1__header">Creating the next...</h1>
                     </div>
-                    <div class="cutaway-section-1__square-wrapper">
+                    <div class="white-part-section-1__square-wrapper">
                         <article class="square">
                             <p class="text_white">CC7 Europe is an independent subsidiary of CC7 (China National
                                 Chemical
@@ -56,15 +56,16 @@
                                 part of the CNCEC group. One of the largest EPC corporations in the world.</p>
                         </article>
                     </div>
-                    <div class="cutaway-section-1__indentation"></div>
+                    <div class="white-part-section-1__indentation"></div>
 
                 </div>
             </section>
-            <section class="cutaway-section-2">
-                <div class="cutaway-section-2__inner">
-                    <div class="cutaway-section-2__p-wrapper">
-                        <div class="cutaway-section-2__indentation"></div>
-                        <p class="cutaway-section-2__p text_purple">We want to create a better, sustainable future for
+            <section class="white-part-section-2">
+                <div class="white-part-section-2__inner">
+                    <div class="white-part-section-2__p-wrapper">
+                        <div class="white-part-section-2__indentation"></div>
+                        <p class="white-part-section-2__p text_purple">We want to create a better, sustainable future
+                            for
                             all
                             generations. With
                             our people,
@@ -73,40 +74,40 @@
                             technological boundaries.
                             Experience the unlimited potential of ideas.</p>
                     </div>
-                    <div class="cutaway-section-2__button-wrapper">
-                        <a class="button cutaway-section-2__button ">
+                    <div class="white-part-section-2__button-wrapper">
+                        <a class="button white-part-section-2__button ">
                             <span class="button__span button__span_white"><span class="button__text">About
                                     us</span></span>
                         </a>
                     </div>
-                    <div class="cutaway-section-2__gradient-line-wrapper">
+                    <div class="white-part-section-2__gradient-line-wrapper">
                         <div class="gradient-line">
                             <div class="gradient-line__back"></div>
                         </div>
                     </div>
-                    <div class="cutaway-section-2__indentation"></div>
+                    <div class="white-part-section-2__indentation"></div>
                 </div>
             </section>
-            <section class="cutaway-section-3">
-                <div class="cutaway-section-3__inner">
-                    <div class="cutaway-section-3__small-header-wrapper">
+            <section class="white-part-section-3">
+                <div class="white-part-section-3__inner">
+                    <div class="white-part-section-3__small-header-wrapper">
                         <p class="text_500 text_grey  small-header">What we do</p>
                     </div>
-                    <div class="cutaway-section-3__header-wrapper">
-                        <h2 class="cutaway-section-3__header text_purple">EPC+</h2>
+                    <div class="white-part-section-3__header-wrapper">
+                        <h2 class="white-part-section-3__header text_purple">EPC+</h2>
                     </div>
-                    <div class="cutaway-section-3__text-wrapper">
-                        <p class="cutaway-section-3__text text_balck ">By looking beyond engineering, procurement and
+                    <div class="white-part-section-3__text-wrapper">
+                        <p class="white-part-section-3__text text_balck ">By looking beyond engineering, procurement and
                             construction, we take EPC to a
                             new level. We call it EPC+.</p>
                     </div>
-                    <div class="cutaway-section-3__button-wrapper">
-                        <a class="button cutaway-section-2__button ">
+                    <div class="white-part-section-3__button-wrapper">
+                        <a class="button white-part-section-2__button ">
                             <span class="button__span button__span_white"><span class="button__text">What we
                                     do</span></span>
                         </a>
                     </div>
-                    <div class="cutaway-section-3__card-wrapper cutaway-section-3__card-wrapper_1">
+                    <div class="white-part-section-3__card-wrapper white-part-section-3__card-wrapper_1">
                         <div class="card">
                             <div class="card__blackout">
                                 <div class="card__inner">
@@ -118,7 +119,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="cutaway-section-3__card-wrapper cutaway-section-3__card-wrapper_2">
+                    <div class="white-part-section-3__card-wrapper white-part-section-3__card-wrapper_2">
                         <div class="card">
                             <div class="card__blackout">
                                 <div class="card__inner">
@@ -130,7 +131,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="cutaway-section-3__card-wrapper cutaway-section-3__card-wrapper_3">
+                    <div class="white-part-section-3__card-wrapper white-part-section-3__card-wrapper_3">
                         <div class="card">
                             <div class="card__blackout">
                                 <div class="card__inner">
@@ -142,7 +143,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="cutaway-section-3__card-wrapper cutaway-section-3__card-wrapper_4">
+                    <div class="white-part-section-3__card-wrapper white-part-section-3__card-wrapper_4">
                         <div class="card">
                             <div class="card__blackout">
                                 <div class="card__inner">
@@ -156,18 +157,18 @@
                     </div>
                 </div>
             </section>
-            <section class="cutaway-section-4">
-                <div class="cutaway-section-4__indentation"></div>
-                <div class="cutaway-section-4__inner">
-                    <div class="cutaway-section-4__square-wrapper">
+            <section class="white-part-section-4" id="color-change">
+                <div class="white-part-section-4__indentation"></div>
+                <div class="white-part-section-4__inner">
+                    <div class="white-part-section-4__square-wrapper">
 
                         <article class="square">
-                            <p class="cutaway-section-4__p text_white font_big">A place where high ambition meets
+                            <p class="white-part-section-4__p text_white font_big">A place where high ambition meets
                                 realistic
                                 solutions. This provides a
                                 variety of opportunities to utilize your
                                 creativity</p>
-                            <div class="cutaway-section-3__small-header-wrapper">
+                            <div class="white-part-section-3__small-header-wrapper">
                                 <p class="text_500 text_grey  small-header">Maryam Zarei - Senior Process Engineer
                                 </p>
                             </div>
@@ -176,14 +177,60 @@
                     </div>
 
                 </div>
-                <div class="cutaway-section-4__indentation"></div>
+                <div class="white-part-section-4__indentation"></div>
             </section>
         </div>
-
+        <div class="black-part">
+            <section class="black-part-section1">
+                <div class="black-part-section1__inner">
+                    <div class="black-part-section1__shaft-wrapper">
+                        <img class="black-part-section1__shaft" src="./images/shaft.webp" alt="">
+                    </div>
+                    <div class="black-part-section-1__square-wrapper">
+                        <article class="square">
+                            <div class="black-part-section-1__h2-wrapper">
+                                <h2 class="black-part-section-1__h2 font_big text_white">PVC2 Project</h2>
+                            </div>
+                            <div class="black-part-section-1__p-wrapper">
+                                <p class="text_white">CC7 Europe is an independent subsidiary of CC7 (China National
+                                    Chemical
+                                    Engineering &
+                                    Construction Corporation Seven)
+                                    part of the CNCEC group. One of the largest EPC corporations in the world.</p>
+                            </div>
+                        </article>
+                    </div>
+                    <div class="black-part-section1__stroika-wrapper">
+                        <img class="black-part-section1__stroika" src="./images/stroika.webp" alt="">
+                    </div>
+                    <div class="black-part-section1__pipes-wrapper">
+                        <img class="black-part-section1__pipes" src="./images/pipes.webp" alt="">
+                    </div>
+                    <div class="black-part-section-1__dark-square-wrapper">
+                        <article class="square square_dark black-part-section-1__dark-square">
+                            <div class="black-part-section1__small-header-wrapper">
+                                <h3 class="small-header text_grey font_card">Location</h3>
+                            </div>
+                            <p class="text_white font_big black-part-section-1__dark-square__p">Navoiy, Uzbekistan
+                            </p>
+                            <div class="black-part-section1__small-header-wrapper">
+                                <h3 class="small-header text_grey  font_card">Work scope</h3>
+                            </div>
+                            <p class="text_white font_big black-part-section-1__dark-square__p">EPC</p>
+                            <div class="black-part-section1__small-header-wrapper">
+                                <h3 class="small-header text_grey  font_card">Capacity</h3>
+                            </div>
+                            <p class="text_white font_big black-part-section-1__dark-square__p">120K T/Y (PVC)</p>
+                        </article>
+                    </div>
+                </div>
+            </section>
+        </div>
 
     </main>
 </body>
 
 <script src="./styles/components/header/menu-burger/menu-burger.js"></script>
+<script src="./styles/main.js"></script>
 
 </html>
