--- a/index.html
+++ b/index.html
@@ -173,11 +173,9 @@
                                 </p>
                             </div>
                         </article>
-
                     </div>
-
                 </div>
-                <div class="white-part-section-4__indentation"></div>
+                <div class="white-part-section-4__indentation" id="image-animation-start"></div>
             </section>
         </div>
         <div class="black-part">
