--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body>
-    <header class="header header_position">
+    <header class="header header_position inner">
         <div class="header__inner ">
             <div class="header__logo-wrapper">
                 <img src="" alt="логотип" class="header__logo">
@@ -42,7 +42,7 @@
     <main>
         <div class="white-part">
             <section class="white-part-section-1">
-                <div class="white-part-section-1__inner">
+                <div class="white-part-section-1__inner inner">
                     <div class="white-part-section-1__indentation"></div>
                     <div class="white-part-section-1__h1-wrapper">
                         <h1 class="text_white white-part-section-1__header">Creating the next...</h1>
@@ -61,7 +61,7 @@
                 </div>
             </section>
             <section class="white-part-section-2">
-                <div class="white-part-section-2__inner">
+                <div class="white-part-section-2__inner inner">
                     <div class="white-part-section-2__p-wrapper">
                         <div class="white-part-section-2__indentation"></div>
                         <p class="white-part-section-2__p text_purple">We want to create a better, sustainable future
@@ -89,7 +89,7 @@
                 </div>
             </section>
             <section class="white-part-section-3">
-                <div class="white-part-section-3__inner">
+                <div class="white-part-section-3__inner inner">
                     <div class="white-part-section-3__small-header-wrapper">
                         <p class="text_500 text_grey  small-header">What we do</p>
                     </div>
@@ -108,58 +108,44 @@
                         </a>
                     </div>
                     <div class="white-part-section-3__card-wrapper white-part-section-3__card-wrapper_1">
-                        <div class="card">
-                            <div class="card__blackout">
-                                <div class="card__inner">
-                                    <img class="card__img" src="./images/Documents.png" alt="">
-                                    <p class="text_white card__text font_card">Feasibility studies, Pre-feed and Feed
-                                        and Detailed
-                                        engineering</p>
-                                </div>
-                            </div>
-                        </div>
+                        <article class="card">
+                            <img class="card__img" src="./images/Documents.png" alt="">
+                            <p class="text_white card__text font_card">Feasibility studies, Pre-feed and Feed
+                                and Detailed
+                                engineering</p>
+                        </article>
                     </div>
                     <div class="white-part-section-3__card-wrapper white-part-section-3__card-wrapper_2">
-                        <div class="card">
-                            <div class="card__blackout">
-                                <div class="card__inner">
-                                    <img class="card__img" src="./images/Documents.png" alt="">
-                                    <p class="text_white card__text font_card">Feasibility studies, Pre-feed and Feed
-                                        and Detailed
-                                        engineering</p>
-                                </div>
-                            </div>
-                        </div>
+                        <article class="card">
+                            <img class="card__img" src="./images/Documents.png" alt="">
+                            <p class="text_white card__text font_card">Feasibility studies, Pre-feed and Feed
+                                and Detailed
+                                engineering</p>
+                        </article>
                     </div>
                     <div class="white-part-section-3__card-wrapper white-part-section-3__card-wrapper_3">
-                        <div class="card">
-                            <div class="card__blackout">
-                                <div class="card__inner">
-                                    <img class="card__img" src="./images/Documents.png" alt="">
-                                    <p class="text_white card__text font_card">Feasibility studies, Pre-feed and Feed
-                                        and Detailed
-                                        engineering</p>
-                                </div>
-                            </div>
-                        </div>
+                        <article class="card">
+
+                            <img class="card__img" src="./images/Documents.png" alt="">
+                            <p class="text_white card__text font_card">Feasibility studies, Pre-feed and Feed
+                                and Detailed
+                                engineering</p>
+
+                        </article>
                     </div>
                     <div class="white-part-section-3__card-wrapper white-part-section-3__card-wrapper_4">
-                        <div class="card">
-                            <div class="card__blackout">
-                                <div class="card__inner">
-                                    <img class="card__img" src="./images/Documents.png" alt="">
-                                    <p class="text_white card__text font_card">Feasibility studies, Pre-feed and Feed
-                                        and Detailed
-                                        engineering</p>
-                                </div>
-                            </div>
-                        </div>
+                        <article class="card">
+                            <img class="card__img" src="./images/Documents.png" alt="">
+                            <p class="text_white card__text font_card">Feasibility studies, Pre-feed and Feed
+                                and Detailed
+                                engineering</p>
+                        </article>
                     </div>
                 </div>
             </section>
             <section class="white-part-section-4" id="color-change">
                 <div class="white-part-section-4__indentation"></div>
-                <div class="white-part-section-4__inner">
+                <div class="white-part-section-4__inner inner">
                     <div class="white-part-section-4__square-wrapper">
 
                         <article class="square">
@@ -180,11 +166,11 @@
         </div>
         <div class="black-part">
             <section class="black-part-section1">
-                <div class="black-part-section1__inner">
-                    <div class="black-part-section1__shaft-wrapper">
-                        <img class="black-part-section1__shaft" src="./images/shaft.webp" alt="">
+                <div class="black-part-section1__inner inner">
+                    <div class="black-part-section1__building-wrapper black-part-section1__building-position">
+                        <img class="black-part-section1__building" src="./images/building.webp" alt="">
                     </div>
-                    <div class="black-part-section-1__square-wrapper">
+                    <div class="black-part-section-1__square-wrapper black-part-section-1__square-position">
                         <article class="square">
                             <div class="black-part-section-1__h2-wrapper">
                                 <h2 class="black-part-section-1__h2 font_big text_white">PVC2 Project</h2>
@@ -198,13 +184,13 @@
                             </div>
                         </article>
                     </div>
-                    <div class="black-part-section1__stroika-wrapper">
-                        <img class="black-part-section1__stroika" src="./images/stroika.webp" alt="">
+                    <div class="black-part-section1__shaft-wrapper black-part-section1__shaft-position">
+                        <img class="black-part-section1__shaft" src="./images/shaft.webp" alt="">
                     </div>
-                    <div class="black-part-section1__pipes-wrapper">
+                    <div class="black-part-section1__pipes-wrapper black-part-section1__pipes-position">
                         <img class="black-part-section1__pipes" src="./images/pipes.webp" alt="">
                     </div>
-                    <div class="black-part-section-1__dark-square-wrapper">
+                    <div class="black-part-section-1__dark-square-wrapper black-part-section-1__dark-square-position">
                         <article class="square square_dark black-part-section-1__dark-square">
                             <div class="black-part-section1__small-header-wrapper">
                                 <h3 class="small-header text_grey font_card">Location</h3>
@@ -223,6 +209,20 @@
                     </div>
                 </div>
             </section>
+            <section class="black-part-section2">
+                <div class="black-part-section2__inner inner">
+                    <div class="black-part-section2__card-wrapper">
+                        <article class="card">
+                            <img class="card__img" src="./images/Documents.png" alt="">
+                            <p class="font_big text_white">Can't find job you're looking for? Apply here!</p>
+                            <p class="text_white card__text font_card">CC7 Europe is excited to announce an open
+                                enrollment period for engineers looking to advance…</p>
+                    </div>
+
+                </div>
+        </div>
+
+        </section>
         </div>
 
     </main>
