--- a/index.html
+++ b/index.html
@@ -210,19 +210,116 @@
                 </div>
             </section>
             <section class="black-part-section2">
-                <div class="black-part-section2__inner inner">
-                    <div class="black-part-section2__card-wrapper">
-                        <article class="card">
-                            <img class="card__img" src="./images/Documents.png" alt="">
-                            <p class="font_big text_white">Can't find job you're looking for? Apply here!</p>
-                            <p class="text_white card__text font_card">CC7 Europe is excited to announce an open
-                                enrollment period for engineers looking to advance…</p>
+                <div class="black-part-section-2__inner cards-section">
+                    <div class="black-part-section-2__small-header-wrapper">
+                        <p class="text_500 text_grey  small-header">Working at CC7 Europe</p>
                     </div>
+                    <div class="white-part-section-3__header-wrapper">
+                        <h2 class="white-part-section-3__header text_purple">Empowering people</h2>
+                    </div>
+                    <div class="black-part-section-2__text-wrapper">
+                        <p class="black-part-section-2__text text_white ">We embrace a highly diverse and inclusive
+                            organisation. An inspiring
+                            workspace where talented</p>
+                    </div>
+                    <div class="black-part-section-2__button-wrapper">
+                        <a class="button black-part-section-2__button ">
+                            <span class="button__span button__span_black"><span class="button__text">What we
+                                    do</span></span>
+                        </a>
+                    </div>
+                    <div class="black-part-section-2__card-wrapper black-part-section-2__card-wrapper_1">
+                        <article class="card">
+                            <img class="card__img" src="./images/idea.png" alt="">
+                            <div>
+                                <h3 class="text_white">
+                                    Can't find job you're looking for? Apply here!
+                                </h3>
+                            </div>
+                            <p class="text_white card__text font_card">Feasibility studies, Pre-feed and Feed
+                                and Detailed
+                                engineering</p>
+                            <div>
 
+                                <p class="font_card text_white">
+                                    fulltime_fixed_term
+                                </p>
+                            </div>
+                            <div>
+                                <p class="font_card text_white">The Hague, Zuid-Holland, Netherlands</p>
+                            </div>
+                        </article>
+                    </div>
+                    <div class="black-part-section-2__card-wrapper black-part-section-2__card-wrapper_2">
+                        <article class="card">
+                            <img class="card__img" src="./images/idea.png" alt="">
+                            <div>
+                                <h3 class="text_white">
+                                    Can't find job you're looking for? Apply here!
+                                </h3>
+                            </div>
+                            <p class="text_white card__text font_card">Feasibility studies, Pre-feed and Feed
+                                and Detailed
+                                engineering</p>
+                            <div>
+
+                                <p class="font_card text_white">
+                                    fulltime_fixed_term
+                                </p>
+                            </div>
+                            <div>
+                                <p class="font_card text_white">The Hague, Zuid-Holland, Netherlands</p>
+                            </div>
+                        </article>
+                    </div>
+                    <div class="black-part-section-2__card-wrapper black-part-section-2__card-wrapper_3">
+                        <article class="card">
+
+                            <img class="card__img" src="./images/idea.png" alt="">
+                            <div>
+                                <h3 class="text_white">
+                                    Can't find job you're looking for? Apply here!
+                                </h3>
+                            </div>
+                            <p class="text_white card__text font_card">Feasibility studies, Pre-feed and Feed
+                                and Detailed
+                                engineering</p>
+                            <div>
+
+                                <p class="font_card text_white">
+                                    fulltime_fixed_term
+                                </p>
+                            </div>
+                            <div>
+                                <p class="font_card text_white">The Hague, Zuid-Holland, Netherlands</p>
+                            </div>
+
+                        </article>
+                    </div>
+                    <div class="black-part-section-2__card-wrapper black-part-section-2__card-wrapper_4">
+                        <article class="card">
+                            <img class="card__img" src="./images/idea.png" alt="">
+                            <div>
+                                <h3 class="text_white">
+                                    Can't find job you're looking for? Apply here!
+                                </h3>
+                            </div>
+                            <p class="text_white card__text font_card">Feasibility studies, Pre-feed and Feed
+                                and Detailed
+                                engineering</p>
+                            <div>
+
+                                <p class="font_card text_white">
+                                    fulltime_fixed_term
+                                </p>
+                            </div>
+                            <div>
+                                <p class="font_card text_white">The Hague, Zuid-Holland, Netherlands</p>
+                            </div>
+                        </article>
+                    </div>
                 </div>
-        </div>
-
-        </section>
+            </section>
         </div>
 
     </main>
